--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["jotty <bard143games@gmail.com>"]
 python = "^3.9"
 enjalice = "^3.0.0"
 aiohttp = "^4.0.0a1"
+sqlalchemy = "^1.4"
 
 [tool.poetry.dev-dependencies]
 
