--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 enjalice = "^3.0.0"
 aiohttp = "^4.0.0a1"
 sqlalchemy = "^1.4"
+fuzzywuzzy = "^0.18.0"
 
 [tool.poetry.dev-dependencies]
 
