--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ enjalice = "^3.0.0"
 aiohttp = "^4.0.0a1"
 sqlalchemy = "^1.4"
 fuzzywuzzy = "^0.18.0"
+transliterate = "^1.10.2"
+beautifulsoup4 = "^4.10.0"
 
 [tool.poetry.dev-dependencies]
 
